tablet spacing fix

--- a/src/components/PlanetStatistics.scss
+++ b/src/components/PlanetStatistics.scss
@@ -52,7 +52,14 @@
 
   // Medium Screens
   @media screen and (min-width: 600px) and (max-width: 960px) {
-    margin-right: 2px;
+    margin: 2rem 0.25rem;
+    h2 {
+      font-size: 1.8rem;
+    }
+
+    h3 {
+      font-size: 0.6rem;
+    }
   }
 
   // Large Screens
